# CPP_EnvFile

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  project.zsh  run_tests.zsh  test_helper.sh  testrun_execs.sh  utility.sh
.github/workflows/: my_testing.yml
includes/api/: myenv.hpp
includes/models/: envdoc.hpp  exceptions.hpp
includes/parser/: envparse.hpp  fileread.hpp  lexer.hpp  lexicals.hpp
includes/parsing/: envparse.hpp  fileread.hpp  lexer.hpp  lexicals.hpp
mains/: test_envdoc.cpp  test_fileread.cpp  test_myenv.cpp
src/: CMakeLists.txt  envdoc.cpp  envparse.cpp  fileread.cpp  myenv.cpp  test_envload.cpp  test_envparse.cpp
src/api/: CMakeLists.txt  myenv.cpp
src/collections/: envdoc.hpp
src/interface/: myenv.hpp
src/models/: CMakeLists.txt  envdoc.cpp  exceptions.cpp
src/parser/: CMakeLists.txt  envparse.cpp  envparse.hpp  fileread.cpp  lexer.cpp  lexicals.cpp
src/parsing/: CMakeLists.txt  envparse.cpp  fileread.cpp  lexicals.cpp
testfiles/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt
